spark.tf
resource "aws_security_group" "spark_sg" {
  name        = "spark_sg"
  description = "Only allow traffic from subnet"
  vpc_id      = aws_vpc.csye7200.id

  ingress = [
    {
      description      = "ssh"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      security_groups  = []
      self             = false
    },
    {
      description      = "spark port"
      from_port        = 2181
      to_port          = 2181
      protocol         = "tcp"
      cidr_blocks      = [aws_vpc.csye7200.cidr_block]
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      security_groups  = []
      self             = false
    }
  ]

  egress = [
    {
      description      = "outbound"
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
      prefix_list_ids  = []
      security_groups  = []
      self             = false
    }
  ]

  tags = {
    Name = "spark"
  }
}

data "aws_ami" "spark_ami" {
  most_recent = true

  filter {
    name   = "name"
    values = [var.spark_ami_name]
  }


  owners = [var.AMI_owner]
}

resource "aws_instance" "spark" {
  ami                     = data.aws_ami.spark_ami.id
  instance_type           = "t2.medium"
  disable_api_termination = false
  subnet_id               = aws_subnet.subnet["us-east-1a"].id
  vpc_security_group_ids  = [aws_security_group.spark_sg.id]
  iam_instance_profile    = aws_iam_instance_profile.webapp_profile.name
  key_name                = var.key_pair_name
  user_data               = <<EOF
#! /bin/bash
echo -e "#!/usr/bin/env bash" >> /home/ubuntu/spark-3.2.0-bin-hadoop3.2-scala2.13/conf/spark-env.sh
echo -e "export SPARK_MASTER_HOST=localhost" >> /home/ubuntu/spark-3.2.0-bin-hadoop3.2-scala2.13/conf/spark-env.sh
mv /home/ubuntu/spark-3.2.0-bin-hadoop3.2-scala2.13/conf/workers.template workers

echo -e "-----BEGIN OPENSSH PRIVATE KEY-----
b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAABlwAAAAdzc2gtcn
[...]
mLpha6PyMFgOsAAAATdWJ1bnR1QGlwLTEwLTAtMS0xNQ==
-----END OPENSSH PRIVATE KEY-----" >> /home/ubuntu/.ssh/id_rsa
echo -e "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCbeTFW3VkEPRY5dSiq3E/jsVPRxjODPq7YTFaHEr57tX/i5KPPNOIhWnaYFou4WfVOOxaMtdLY6Qjb9APmhMYdI5BfmS+gJwA9RitLhZm1S9iQqcRN51+zRjnvjgVfGtMJsNiTQTWYY6z7CdhM8cTY5wLCsSSTd8UvHgPVyl0ZaJqoSzid4LbeqSjrUv6A7fPyRXNn3zBQHxE+FigwsUPHxsITGVeIzACEcAF3SKqlLQ0eIQXTrotKCTcOJzg7dTLpFxjUCOkvLwR0J1T/udvGbMQ+qgRRmnmFwn3/hDsEOWcntGWV2gAzAzyAmMNMa4VWtuXOCRt/MHsztLO/0WHZZk8j7XX5EtotkBRWrYCC6hbS/5eM43JH49UoenHf3cVi5rf+Wgk9uOIG27X9pSK4YjdBE65BaM4AWq0T/BaNLReU6FTUcuMDot/RzQi1Pn+QHgx [...]
cp -r /home/ubuntu/.ssh /root
chmod 600 /root/.ssh/id_rsa

nohup /home/ubuntu/spark-3.2.0-bin-hadoop3.2-scala2.13/sbin/start-all.sh > ~/spark.log 2>&1 &
/home/ubuntu/spark-3.2.0-bin-hadoop3.2-scala2.13/sbin/start-all.sh


echo -e "KAFKA_IP=${aws_instance.kafka["0"].private_ip}" >> /home/ubuntu/.env
echo -e "KAFKA_IP1=${aws_instance.kafka["1"].private_ip}" >> /home/ubuntu/.env
echo -e "KAFKA_IP2=${aws_instance.kafka["2"].private_ip}" >> /home/ubuntu/.env
echo -e "MYSQL_URL=${aws_db_instance.mysql.address}" >> /home/ubuntu/.env
echo -e "MYSQL_USER=${aws_db_instance.mysql.username}" >> /home/ubuntu/.env
echo -e "MYSQL_PW=${aws_db_instance.mysql.password}" >> /home/ubuntu/.env
EOF

  root_block_device {
    volume_size           = 8
    volume_type           = "gp2"
    delete_on_termination = true
  }
  tags = {
    Name = "spark"
  }
}
